bat.bool1.makes10.Makes10.scala.error
Compilation error:
Makes10:4: error: '=>' expected but ',' found.
    case 10,_ => return true
           ^Makes10:5: error: '=>' expected but ',' found.
    case _,10 => return true
          ^