bat.bool1.makes10.Makes10.scala.code
def makes10(a:Int, b:Int): Boolean = {
  (a,b) match {
    case 10,_ => return true
    case _,10 => return true
    case _ => if (a+b=10) {
      return true
    }
    else {
      return false
    }
  }
}